--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ table span {
 var answers = ["freedom", "formation", "sorry", "6 inch", "hold up", "dont hurt yourself", "pray you catch me", "daddy lessons", "dlove drought", "sandcastles", "forward", "all night"];
 
 // d.
-var time_limit = 60; // in seconds
+var time_limit = 180; // in seconds
 
 </script>
 
@@ -61,6 +61,9 @@ var time_limit = 60; // in seconds
 
 
 <!-- e. -->
+<body onload="setup()">
+
+
 <body>
 
 <header>
@@ -81,7 +84,7 @@ var time_limit = 60; // in seconds
         </aside>
 
         <!-- g. -->
-        <img class="icon" src="img/icon.jpg" alt="quiz logo">
+        <img class="icon" src="img/lemonade.jpg" alt="quiz logo">
 
         <!-- h. -->
         <h2>Name all the songs in "Lemonade" album.</h2>
@@ -92,7 +95,7 @@ var time_limit = 60; // in seconds
 
         <div class="column">
             <!-- i. -->
-            <input id="start" type="button" value="PLAY GAME">
+            <input type="button" onclick="start()" value="play game">
         </div>
 
         <div class="column">
@@ -121,26 +124,32 @@ var time_limit = 60; // in seconds
         <table>
         <tr>
         <td><span id="answer0"></span></td>
+
         <td><span id="answer1"></span></td>
         </tr>
         <tr>
         <td><span id="answer2"></span></td>
+
         <td><span id="answer3"></span></td>
         </tr>
         <tr>
         <td><span id="answer4"></span></td>
+
         <td><span id="answer5"></span></td>
         </tr>
         <tr>
         <td><span id="answer6"></span></td>
+
         <td><span id="answer7"></span></td>
         </tr>
         <tr>
         <td><span id="answer8"></span></td>
+
         <td><span id="answer9"></span></td>
         </tr>
         <tr>
         <td><span id="answer10"></span></td>
+
         <td><span id="answer11"></span></td>
         </tr>
         </table>
@@ -157,7 +166,7 @@ var time_limit = 60; // in seconds
 </div>
 
 <!-- n. -->
-
+  <script src="js/sporclone.js"></script>
 
 </body>
 </html>
